--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -16,7 +16,18 @@
             <li>Rice</li>
             <li>Pepper</li>
             <li>Tomato</li>
+            <li>Oil</li>
+            <li>Water</li>
+            <li>Salt and spices</li>
         </ul>
+        <h2>Steps to cook</h2>
+        <ol>
+            <li>Boil Water 1 litre of water</li>
+            <li>Add a cup of rice</li>
+            <li>Put a scoop of tomato paste and 50 mls of groundnut oil</li>
+            <li>Add salt and spices to desired taste</li>
+            <li>Voila!</li>
+        </ol>
 
     </body>
 </html>
