--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
      <p>My recipes include the following;</p>
      <ul>
          <li><a href="recipes/jollof.html">Jollof Rice</a></li>
+         <li><a href="recipes/eba.html">Eba</a></li>
+         
      </ul>
  </body>
  </html>
