i started applying css to my htm

--- a/recipes/eba.html
+++ b/recipes/eba.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<title>
+<html>
     <head>
         <title>Eba</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
         <h1>Eba</h1>
-        <img src="img/eba.jpeg" width="300" alt="A plate of eba">
+        <div class="top-image">
+        <span><img src="img/eba.jpeg" width="300" alt="A plate of eba"></span>
         <h3>An amazing meal eaten with vegetable soup</h3>
+        </div>
 
         <p>This is a common food eaten in most parts of Nigeria</p>
         <p>It is usually eaten with vegetable soup</p>
@@ -25,5 +28,16 @@
             <li>Stir till uniform color</li>
             <li>Eba is ready!</li>
         </ol>
+        <div class="container">
+            <div class="left-cont">
+              <div class="left-left"></div>
+              <div class="right-left"></div>
+            </div>
+            <div class="middle-cont"> I THINK IT IS MAKING SENSE NOW!</div>
+            <div class="right-cont">
+              <div class="left-right"></div>
+              <div class="right-right"></div>
+            </div>
+        </div>
     </body>
 </html>
