--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
     <title>Dobe Recipes</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
  </head>
 
  <body>
@@ -11,7 +12,7 @@
      <ul>
          <li><a href="recipes/jollof.html">Jollof Rice</a></li>
          <li><a href="recipes/eba.html">Eba</a></li>
-         
+
      </ul>
  </body>
  </html>
