--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -3,6 +3,7 @@
     <head>
         <title>Jollof</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
